# ZJDNS

./: .dockerignore  .gitignore  .golangci.yml  AGENTS.md  AUDIT_PLAN.md  CLAUDE.md  Cargo.toml  Dockerfile  GeneratePollutedIP.sh  HANDOVER.md  LICENSE  README.md  README_ZH.md  bench_test.go  cache.go  cache_null.go  cache_redis.go  cidr.go  config.debug.json  config.example.json  config.go  connection.go  connection_manager.go  constants.go  dns_client.go  dns_hijack.go  dns_rewriter.go  dns_server.go  edns.go  edns_manager.go  filters.go  go.mod  go.sum  ip_filter.go  ip_speedtest.go  latency_probe.go  logger.go  logging.go  main.go  pool.go  (+23 more)
.husky/: pre-commit
adguardhome/: adguardhome.sh  dnsrewrite.txt
cache/: async_writer.go  async_writer_test.go  benchmark_test.go  cache.go  cache_redis.go  cache_test.go  helpers.go  infra.go  memory.go  nsec.go  nsec_test.go  null.go  persist.go  ptr.go  redis.go  sqlite.go  sqlite_helpers.go  sqlite_schema.go  sqlite_stats.go  sqlite_stmts.go  sqlite_store.go  sqlite_wire.go  stats.go  store.go  types.go  utils.go
caddy/: Caddyfile  caddy.sh
cidr/: cidr.go  cidr_test.go
clash/: clash.sh  config.yaml
clash-premium/: clash-premium.sh  config.yaml
cli/: config_example.go  dns_stamp.go  dnscrypt_keys.go  parse.go
cloudflared/: cloudflared.sh
config/: config.go  config_load.go  config_manager.go  config_test.go  config_validate.go  ddr.go  defaults.go  ecs_config.go  load.go  types.go  utils.go  validate.go
database/: db.go  db_test.go  helpers.go  migration.go  schema.go  sqlutil.go  stmts.go  wire.go
(+650 files in other folders)
