[package]
name = "zjdns"
version = "0.1.0"
edition = "2021"
authors = ["ZJDNS"]

[dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "rustls-tls"] }
hyper = { version = "0.14", features = ["full"] }
trust-dns-proto = "0.22"
tokio-rustls = "0.23"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
webpki-roots = "0.22"
rcgen = "0.9"
redis = { version = "0.23", features = ["aio", "tokio-comp", "connection-manager"] }
lru = "0.8"
ipnet = "2.8"
async-trait = "0.1"
url = "2"
base64 = "0.21"
hex = "0.4"
